k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello

  template:
    metadata:
      labels:
        app: hello

    spec:
      containers:
        - name: hello-api
          image: hello-k8s:v2
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000

            initialDelaySeconds: 2
            periodSeconds: 5

          resources:
              
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
